--- a/clients/android/app/src/main/res/menu/menu_list_files.xml
+++ b/clients/android/app/src/main/res/menu/menu_list_files.xml
@@ -2,6 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    app:popupTheme="@style/DarkBlue.Actionbar"
     tools:context="app.lockbook.login.WelcomeActivity">
     <item
         android:id="@+id/menu_list_files_sort"
@@ -32,15 +33,18 @@
         </menu>
     </item>
 
-<!--    <item-->
-<!--        android:id="@+id/menu_list_files_search"-->
-<!--        android:icon="@drawable/ic_baseline_search_24"-->
-<!--        android:orderInCategory="1"-->
-<!--        android:title="@string/menu_search"-->
-<!--        app:showAsAction="always" />-->
-
     <item
-        android:id="@+id/menu_list_files_settings"
-        android:title="@string/settings_title"
-        app:showAsAction="never" />
+        android:icon="@drawable/ic_baseline_more_vert_24"
+        android:orderInCategory="2"
+        app:showAsAction="always"
+        android:title="@string/overflow">
+        <menu>
+            <item
+                android:id="@+id/menu_list_files_settings"
+                android:title="@string/settings_title"
+                app:showAsAction="always" />
+        </menu>
+    </item>
+
+
 </menu>
