--- a/clients/android/app/src/main/res/layout/fragment_list_files.xml
+++ b/clients/android/app/src/main/res/layout/fragment_list_files.xml
@@ -34,7 +34,7 @@
         </LinearLayout>
 
         <FrameLayout
-            android:id="@+id/list_files_layout"
+            android:id="@+id/list_files_frame_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:animateLayoutChanges="true">
