--- a/clients/android/app/src/main/res/layout/splash_screen.xml
+++ b/clients/android/app/src/main/res/layout/splash_screen.xml
@@ -6,6 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+        android:id="@+id/migrate_progress_bar"
+        android:visibility="gone"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:minHeight="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/splash_screen_image" />
+
     <TextView
         android:id="@+id/splash_screen_text"
         style="@style/Text.Headline"
