--- a/clients/android/app/src/main/res/layout/recyclerview_content_files.xml
+++ b/clients/android/app/src/main/res/layout/recyclerview_content_files.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="0dp"
-    android:backgroundTint="@color/black"
+    android:backgroundTint="?attr/colorPrimaryDark"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground">
