--- a/clients/android/app/src/main/res/drawable/ic_baseline_arrow_forward_24.xml
+++ b/clients/android/app/src/main/res/drawable/ic_baseline_arrow_forward_24.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="24"
     android:tint="@color/blue">
   <path
-      android:fillColor="@android:color/white"
+      android:fillColor="@color/colorPrimary"
       android:pathData="M12,4l-1.41,1.41L16.17,11H4v2h12.17l-5.58,5.59L12,20l8,-8z"/>
 </vector>
