--- a/clients/android/app/src/main/res/layout/activity_list_files.xml
+++ b/clients/android/app/src/main/res/layout/activity_list_files.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
-        android:background="@color/black" />
+        android:theme="@style/DarkBlue.Actionbar" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/files_fragment"
