--- a/clients/android/app/src/main/res/values-night/colors.xml
+++ b/clients/android/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,6 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
+
   <color name="blue">#4069B0</color>
   <color name="green">#5EB75C</color>
   <color name="indigo">#4F54A1</color>
@@ -14,11 +15,11 @@
   <color name="light">#E3E5EB</color>
   <color name="grey">#787878</color>
 
-  <color name="navigationBarColor">@color/light</color>
+  <color name="navigationBarColor">@color/black</color>
   <color name="colorPrimary">@color/blue</color>
   <color name="colorAccent">@color/blue</color>
-  <color name="colorPrimaryDark">@color/light</color>
-  <color name="windowBackground">@color/light</color>
-  <color name="textColor">@color/black</color>
-  <color name="documentNameTextColor">@color/black</color>
+  <color name="colorPrimaryDark">@color/black</color>
+  <color name="windowBackground">@color/black</color>
+  <color name="textColor">@color/light</color>
+  <color name="documentNameTextColor">@color/light</color>
 </resources>
