--- a/clients/android/app/src/main/res/values/styles.xml
+++ b/clients/android/app/src/main/res/values/styles.xml
@@ -1,10 +1,10 @@
 <resources>
-    <style name="DarkBlue" parent="Theme.AppCompat">
-        <item name="android:navigationBarColor">@color/black</item>
-        <item name="colorPrimary">@color/blue</item>
-        <item name="colorAccent">@color/blue</item>
-        <item name="colorPrimaryDark">@color/black</item>
-        <item name="android:windowBackground">@color/black</item>
+    <style name="DarkBlue" parent="Theme.AppCompat.DayNight">
+        <item name="android:navigationBarColor">@color/navigationBarColor</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="android:windowBackground">@color/colorPrimaryDark</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:actionBarStyle">@style/DarkBlue.Actionbar</item>
@@ -12,11 +12,11 @@
         <item name="android:actionOverflowButtonStyle">@style/DarkBlue.Overflow</item>
     </style>
 
-    <style name="DarkBlue.Dialog" parent="Theme.AppCompat.Dialog">
-        <item name="android:background">@color/black</item>
-        <item name="colorPrimary">@color/blue</item>
-        <item name="colorAccent">@color/blue</item>
-        <item name="colorPrimaryDark">@color/black</item>
+    <style name="DarkBlue.Dialog" parent="Theme.AppCompat.DayNight.Dialog">
+        <item name="android:background">@color/windowBackground</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="android:windowMinWidthMajor">100%</item>
         <item name="android:windowMinWidthMinor">100%</item>
     </style>
@@ -24,12 +24,14 @@
     <style name="DarkBlue.NoActionBar" parent="DarkBlue">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="background">@color/black</item>
+        <item name="background">@color/windowBackground</item>
     </style>
 
     <style name="DarkBlue.Actionbar" parent="Widget.AppCompat.ActionBar">
-        <item name="backgroundColor">@color/black</item>
-        <item name="android:textColorPrimary">@color/blue</item>
+        <item name="backgroundColor">@color/windowBackground</item>
+        <item name="android:textColorPrimary">@color/textColor</item>
+        <item name="android:textColorSecondary">@color/textColor</item>
+        <item name="actionMenuTextColor">@color/textColor</item>
     </style>
 
     <style name="DarkBlue.Overflow">
@@ -37,28 +39,33 @@
     </style>
 
     <style name="DarkBlue.Title" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="titleTextColor">@color/blue</item>
-
+        <item name="titleTextColor">@color/colorPrimary</item>
     </style>
 
     <style name="Text.Caption" parent="TextAppearance.AppCompat.Caption" />
 
     <style name="Text.Small" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">@color/textColor</item>
         <item name="android:fontFamily">monospace</item>
     </style>
 
     <style name="Text.Body" parent="TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/textColor</item>
         <item name="android:fontFamily">monospace</item>
         <item name="android:textAlignment">center</item>
     </style>
 
     <style name="Text.Medium" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textColor">@color/textColor</item>
         <item name="android:fontFamily">monospace</item>
     </style>
 
-    <style name="Toolbar.Title" parent="TextAppearance.AppCompat.Large"/>
+    <style name="Toolbar.Title" parent="TextAppearance.AppCompat.Large">
+        <item name="android:textColor">@color/textColor</item>
+    </style>
 
     <style name="File.Title" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/documentNameTextColor</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:fontFamily">monospace</item>
@@ -66,13 +73,14 @@
     </style>
 
     <style name="File.SubTitle" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textColor">@color/textColor</item>
         <item name="alpha">0.4</item>
         <item name="android:fontFamily">monospace</item>
         <item name="android:gravity">start</item>
     </style>
 
     <style name="Text.Headline" parent="TextAppearance.AppCompat.Display1">
-        <item name="android:textColor">@color/light</item>
+        <item name="android:textColor">@color/textColor</item>
         <item name="android:fontFamily">monospace</item>
         <item name="android:textAlignment">center</item>
     </style>
