--- a/clients/android/app/src/main/res/layout/activity_import_account.xml
+++ b/clients/android/app/src/main/res/layout/activity_import_account.xml
@@ -7,6 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:paddingHorizontal="25dp"
+    android:id="@+id/import_account_layout"
     tools:context=".login.WelcomeActivity">
 
     <TextView
