--- a/clients/android/app/src/main/res/layout/activity_new_account.xml
+++ b/clients/android/app/src/main/res/layout/activity_new_account.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
+    android:id="@+id/new_account_layout"
     android:paddingHorizontal="25dp">
 
     <TextView
