--- a/clients/android/app/src/main/res/values/colors.xml
+++ b/clients/android/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
   <color name="grey">#787878</color>
 
   <color name="navigationBarColor">@color/light</color>
+  <color name="iconStatusBarColor">@color/black</color>
   <color name="colorPrimary">@color/blue</color>
   <color name="colorAccent">@color/blue</color>
   <color name="colorPrimaryDark">@color/light</color>
