both modes status bar icon colors switch with theme

--- a/clients/android/app/src/main/res/values-night/colors.xml
+++ b/clients/android/app/src/main/res/values-night/colors.xml
@@ -24,4 +24,6 @@
   <color name="textColor">@color/light</color>
   <color name="scannerIconColor">@color/light</color>
   <color name="documentNameTextColor">@color/light</color>
+
+  <bool name="windowLightStatusBar">false</bool>
 </resources>
