--- a/clients/android/app/src/main/res/values/colors.xml
+++ b/clients/android/app/src/main/res/values/colors.xml
@@ -23,4 +23,6 @@
   <color name="textColor">@color/black</color>
   <color name="scannerIconColor">@color/black</color>
   <color name="documentNameTextColor">@color/black</color>
+
+  <bool name="windowLightStatusBar">true</bool>
 </resources>
