--- a/clients/android/app/src/main/res/values-night/colors.xml
+++ b/clients/android/app/src/main/res/values-night/colors.xml
@@ -13,6 +13,7 @@
   <color name="dark">#3F3F41</color>
   <color name="black">#000000</color>
   <color name="light">#E3E5EB</color>
+  <color name="white">#FFFFFF</color>
   <color name="grey">#787878</color>
 
   <color name="navigationBarColor">@color/black</color>
