--- a/clients/android/app/src/main/res/layout/activity_handwriting_editor.xml
+++ b/clients/android/app/src/main/res/layout/activity_handwriting_editor.xml
@@ -33,6 +33,13 @@
                 android:paddingHorizontal="5dp"
                 android:spinnerMode="dropdown"
                 android:src="@drawable/baseline_palette_white_pallete_18dp" />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/handwriting_editor_erase"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:text="@string/handwriting_editor_erase" />
         </LinearLayout>
 
     </androidx.appcompat.widget.Toolbar>
