inner workings of move

--- a/clients/android/app/src/main/res/layout/activity_handwriting_editor.xml
+++ b/clients/android/app/src/main/res/layout/activity_handwriting_editor.xml
@@ -55,7 +55,7 @@
         android:layout_marginTop="-4dp"
         android:minHeight="20dp" />
 
-    <app.lockbook.loggedin.editor.HandwritingEditorView
+    <app.lockbook.ui.HandwritingEditorView
         android:id="@+id/handwriting_editor"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
