move file inital stuff

--- a/clients/android/app/src/main/res/layout/activity_list_files.xml
+++ b/clients/android/app/src/main/res/layout/activity_list_files.xml
@@ -17,7 +17,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/files_fragment"
-        android:name="app.lockbook.loggedin.listfiles.ListFilesFragment"
+        android:name="app.lockbook.screen.ListFilesFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/fragment_list_files" />
