--- a/clients/android/app/src/main/res/layout/recyclerview_content_files.xml
+++ b/clients/android/app/src/main/res/layout/recyclerview_content_files.xml
@@ -12,8 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingVertical="5dp"
-        >
+        android:paddingVertical="5dp">
 
         <TextView
             android:id="@+id/file_name"
