--- a/clients/android/app/src/main/res/layout/dialog_file_info.xml
+++ b/clients/android/app/src/main/res/layout/dialog_file_info.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:paddingHorizontal="25dp">
+<ListView
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/popup_info_name"
         style="@style/Text.Small"
+        android:text="@string/default_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="monospace"
@@ -17,6 +15,7 @@
     <TextView
         android:id="@+id/popup_info_id"
         style="@style/Text.Small"
+        android:text="@string/default_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="15dp" />
@@ -24,6 +23,7 @@
     <TextView
         android:id="@+id/popup_info_file_type"
         style="@style/Text.Small"
+        android:text="@string/default_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="15dp" />
@@ -31,6 +31,7 @@
     <TextView
         android:id="@+id/popup_info_metadata_version"
         style="@style/Text.Small"
+        android:text="@string/default_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="15dp" />
@@ -38,31 +39,9 @@
     <TextView
         android:id="@+id/popup_info_content_version"
         style="@style/Text.Small"
+        android:text="@string/default_value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="15dp" />
 
-    <EditText
-        android:id="@+id/new_name_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:hint="@string/pop_up_info_new_name"
-        android:importantForAutofill="no"
-        android:inputType="text" />
-
-    <Button
-        android:id="@+id/popup_info_rename"
-        style="@style/Button.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/pop_up_info_rename_button_title" />
-
-    <Button
-        android:id="@+id/popup_info_delete"
-        style="@style/Button.Colored"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="@string/pop_up_info_delete_button_title" />
-</LinearLayout>
+</ListView>
