--- a/clients/android/app/src/main/res/menu/menu_list_files.xml
+++ b/clients/android/app/src/main/res/menu/menu_list_files.xml
@@ -34,10 +34,10 @@
     </item>
 
     <item
-        android:id="@+id/menu_list_files_rename"
-        android:icon="@drawable/ic_baseline_text_format_24"
-        android:orderInCategory="3"
-        android:title="@string/menu_list_files_rename"
+        android:id="@+id/menu_list_files_info"
+        android:icon="@drawable/ic_baseline_info_24"
+        android:orderInCategory="1"
+        android:title="@string/menu_list_files_info"
         android:visible="false"
         app:showAsAction="always" />
 
@@ -50,31 +50,33 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/menu_list_files_info"
-        android:icon="@drawable/ic_baseline_info_24"
-        android:orderInCategory="1"
-        android:title="@string/menu_list_files_info"
+        android:id="@+id/menu_list_files_rename"
+        android:icon="@drawable/ic_baseline_text_format_24"
+        android:orderInCategory="3"
+        android:title="@string/menu_list_files_rename"
         android:visible="false"
         app:showAsAction="always" />
 
     <item
+        android:id="@+id/menu_list_files_move"
+        android:icon="@drawable/ic_baseline_content_cut_24"
+        android:title="@string/menu_list_files_move"
+        android:visible="false"
+        android:orderInCategory="4"
+        app:showAsAction="always" />
+
+    <item
         android:icon="@drawable/ic_baseline_more_vert_24"
-        android:orderInCategory="2"
+        android:orderInCategory="5"
         app:showAsAction="always"
         android:title="@string/overflow">
-        <menu>
+        <menu
+            android:id="@+id/menu_list_files_more">
             <item
                 android:id="@+id/menu_list_files_settings"
-                android:title="@string/settings_title"
-                app:showAsAction="always" />
+                android:title="@string/settings_title" />
 
-            <item
-                android:id="@+id/menu_list_files_move"
-                android:title="@string/settings_title"
-                android:visible="false"
-                app:showAsAction="always" />
         </menu>
     </item>
-
 
 </menu>
