--- a/clients/android/app/src/main/res/layout/dialog_move_file.xml
+++ b/clients/android/app/src/main/res/layout/dialog_move_file.xml
@@ -1,34 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/move_file_dialog"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/move_file_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <data>
+        <variable
+            name="moveFileViewModel"
+            type="app.lockbook.model.MoveFileViewModel" />
+    </data>
 
     <LinearLayout
+        android:id="@+id/move_file_dialog"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingHorizontal="10dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <Button
-            android:id="@+id/move_file_cancel"
-            style="@style/Button.Borderless.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/move_file_cancel" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/move_file_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-        <Button
-            android:id="@+id/move_file_confirm"
-            style="@style/Button.Borderless.Colored"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/move_file_confirm" />
+            android:orientation="horizontal"
+            android:paddingHorizontal="10dp">
+
+            <Button
+                android:id="@+id/move_file_cancel"
+                style="@style/Button.Borderless.Colored"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/move_file_cancel" />
+
+            <Button
+                android:id="@+id/move_file_confirm"
+                style="@style/Button.Borderless.Colored"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/move_file_confirm" />
+        </LinearLayout>
+
     </LinearLayout>
 
-</LinearLayout>
+</layout>
