--- a/clients/android/app/src/main/res/layout/dialog_file_info.xml
+++ b/clients/android/app/src/main/res/layout/dialog_file_info.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
+    style="@style/DarkBlue.Dialog"
     android:orientation="vertical">
 
     <TextView
