--- a/clients/android/app/src/main/res/values-night/colors.xml
+++ b/clients/android/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,5 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-
   <color name="blue">#4069B0</color>
   <color name="green">#5EB75C</color>
   <color name="indigo">#4F54A1</color>
@@ -16,6 +15,7 @@
   <color name="white">#FFFFFF</color>
   <color name="grey">#787878</color>
 
+  <color name="selectedFileBackground">#64B5F6</color>
   <color name="navigationBarColor">@color/black</color>
   <color name="iconStatusBarColor">@color/light</color>
   <color name="colorPrimary">@color/blue</color>
