--- a/clients/android/app/src/main/res/layout/grid_layout_file_item.xml
+++ b/clients/android/app/src/main/res/layout/grid_layout_file_item.xml
@@ -2,8 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="200sp"
-    android:layout_height="200sp"
+    android:layout_width="190sp"
+    android:layout_height="190sp"
     app:cardCornerRadius="0dp"
     android:backgroundTint="?attr/colorPrimaryDark"
     android:clickable="true"
@@ -13,37 +13,58 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingVertical="5dp">
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/grid_file_name"
             style="@style/File.Title"
-            android:layout_width="130sp"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="Tempory file name"
-            app:layout_constraintBottom_toTopOf="@+id/grid_file_description"
+            app:layout_constraintBottom_toTopOf="@+id/grid_file_description1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/grid_file_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/grid_file_description"
-            style="@style/File.SubTitle"
-            android:layout_width="160sp"
-            android:layout_height="wrap_content"
+            android:id="@+id/grid_file_description1"
+            style="@style/File.SubSubTitle"
+            android:layout_width="160dp"
+            android:layout_height="40dp"
             android:padding="5dp"
-            android:text="This is some little discription for all of those people who want it."
+            app:layout_constraintBottom_toTopOf="@+id/grid_file_description2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/grid_file_icon" />
+
+        <TextView
+            android:id="@+id/grid_file_description2"
+            style="@style/File.SubSubTitle"
+            android:layout_width="160dp"
+            android:layout_height="40dp"
+            android:padding="5dp"
+            app:layout_constraintBottom_toTopOf="@+id/grid_file_description1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/grid_file_description3" />
+
+        <TextView
+            android:id="@+id/grid_file_description3"
+            style="@style/File.SubSubTitle"
+            android:layout_width="160dp"
+            android:layout_height="40dp"
+            android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/grid_file_description2" />
 
         <ImageView
             android:id="@+id/grid_file_icon"
             android:layout_width="50dp"
             android:layout_height="70dp"
-            android:padding="5dp"
             android:contentDescription="@string/file_image_content_description"
+            android:padding="5dp"
             android:src="@drawable/ic_baseline_insert_drive_file_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
