--- a/clients/android/app/src/main/res/layout/grid_layout_file_item.xml
+++ b/clients/android/app/src/main/res/layout/grid_layout_file_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="190sp"
-    android:layout_height="190sp"
+    android:layout_width="90sp"
+    android:layout_height="90sp"
     app:cardCornerRadius="0dp"
     android:backgroundTint="?attr/colorPrimaryDark"
     android:clickable="true"
@@ -15,30 +15,19 @@
 
         <TextView
             android:id="@+id/grid_file_name"
-            style="@style/File.Title"
+            style="@style/File.TitleGrid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            app:layout_constraintBottom_toTopOf="@+id/grid_file_description"
+            android:maxLines="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/grid_file_icon" />
 
-        <TextView
-            android:id="@+id/grid_file_description"
-            style="@style/File.SubSubTitle"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/grid_file_name" />
-
         <ImageView
             android:id="@+id/grid_file_icon"
-            android:layout_width="80dp"
-            android:layout_height="100dp"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
             android:contentDescription="@string/file_image_content_description"
             app:layout_constraintBottom_toTopOf="@+id/grid_file_name"
             app:layout_constraintEnd_toEndOf="parent"
